<resources>
    <string name="app_name">ActivityMaster</string>
    <string name="Male">Hombre</string>
    <string name="Female">Mujer</string>
    <string name="Heigth">Altura</string>
    <string name="Weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="Calculate">Calcular</string>
    <string name="Result">Tu resultado</string>
    <string name="Recalculate">Recalcular</string>

    <string name="error">Error</string>

    <string name="title_low_weight">Bajo peso</string>
    <string name="decription_low_weight">Estas por debajo del peso que deberias tener,ve al nutriologo o doctor y... COME MAS!!!</string>

    <string name="title_very_good_weight">Buen peso</string>
    <string name="decription_very_good_weight">Estas muy bien!, continua asi, sigue haciendo ejercicio y comiendo bien</string>

    <string name="title_good_weight">Sobre peso</string>
    <string name="decription_good_weight">Estas un poco por encima de tu peso ideal, no estas mal, pero cuidate mas y bajale a la comedera :)</string>
    //Estos mensajes son asi como un metodo de broma y estoy conciente que no es lo correcto
    //pero quise poner estos en vez de un texto aburrido y general
    <string name="title_very_lot_weight">Obesidad</string>
    <string name="decription_very_lot_weight">Estas por muy encima de tu peso ideal, no te juzgo, pero deberias hacer ejercicio y dieta, controlada por un nutriologo y un doctor</string>


    //String TODOAPP
    <string name="todo_title">Bienvenido, Rulo</string>
    <string name="todo_categories">Categorias</string>
    <string name="todo_task">Tareas</string>
    <string name="todo_dialog_add_task">Añade tu Tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_Personal">Personal</string>
    <string name="todo_dialog_category_Other">Otros</string>
    <string name="todo_dialog_btn_add_task">Crear Tarea</string>

</resources>