<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/background_component"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_dialog_add_task"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_category_business"
            android:textColor="@color/white"
            android:checked="true"
            android:buttonTint="@color/todo_business_category"

            />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_category_Personal"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_personal_category"

            />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_category_Other"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_other_category"

            />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_app"
        android:text="@string/todo_dialog_btn_add_task"
        />



</LinearLayout>