<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_app_todo"
        tools:context=".todoapp.TodoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/todo_title"
            android:textAllCaps="true"
            android:layout_marginVertical="44dp"
            android:layout_marginHorizontal="32dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_categories"
            style="@style/Todo_Subtitle"
            android:textStyle="bold"
            android:textSize="16dp"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/todo_task"
            android:textStyle="bold"
            style="@style/Todo_Subtitle"
            android:textSize="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"


            />






    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/baseline_add_24"
        app:tint="@color/white"
        app:fabSize="normal"
        app:backgroundTint="@color/todo_background_card"
        android:layout_gravity="end|bottom"
        />
</FrameLayout>